kubernetes/frontend.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  namespace: exam
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: abdessamadbda/angular-frontend:0.2
        ports:
        - containerPort: 80
          name: http-port
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/application_ready
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/application_ready
          initialDelaySeconds: 3
          periodSeconds: 5
        startupProbe:
          exec:
            command:
            - touch
            - /tmp/application_ready  
          failureThreshold: 30
          periodSeconds: 5

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: exam
  annotations:
    spec.ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: projet-aseds-ine2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend
                port:
                  number: 80
